set nginx ingress annotations

--- a/k8s/argocd/argocd/helm/values.yaml
+++ b/k8s/argocd/argocd/helm/values.yaml
@@ -34,8 +34,13 @@ server:
   #   - "--insecure"
   ingress:
     enabled: true
-    # annotations:
+    annotations:
     #   nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+      nginx.ingress.kubernetes.io/ssl-passthrough: "true"
+      # If you encounter a redirect loop or are getting a 307 response code
+      # then you need to force the nginx ingress to connect to the backend using HTTPS.
+      #
+      nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
     ingressClassName: nginx
     hosts:
     - argocd.zeb17-int.duckdns.org
