--- a/k8s/argocd/argocd/generated.yaml
+++ b/k8s/argocd/argocd/generated.yaml
@@ -130,7 +130,7 @@ type: Opaque
 # Setting a blank data again will wipe admin password/key/cert
 data:
   admin.password: JDJhJDEwJHhJdHgxYmlKdTVRcWwuQU5mLzNDanUvbXhZRTA0V1VHNWUzSS9Nb1JweGJWU2RvRGdMTi9X
-  admin.passwordMtime: MjAyMy0xMi0wM1QwOTowMzoxNFo=
+  admin.passwordMtime: MjAyMy0xMi0wM1QwOTowODozMlo=
 ---
 # Source: argo-cd/templates/argocd-configs/repository-secret.yaml
 apiVersion: v1
@@ -20916,6 +20916,7 @@ metadata:
     app.kubernetes.io/version: "v2.8.3"
   annotations:
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
     nginx.ingress.kubernetes.io/ssl-passthrough: "true"
 spec:
   ingressClassName: nginx
