--- a/k8s/argocd/argocd/helm/values.yaml
+++ b/k8s/argocd/argocd/helm/values.yaml
@@ -30,12 +30,10 @@ configs:
     argocdServerAdminPassword: $2a$10$xItx1biJu5Qql.ANf/3Cju/mxYE04WUG5e3I/MoRpxbVSdoDgLN/W
 
 server:
-  # extraArgs:
-  #   - "--insecure"
   ingress:
     enabled: true
     annotations:
-    #   nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+      nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
       nginx.ingress.kubernetes.io/ssl-passthrough: "true"
       # If you encounter a redirect loop or are getting a 307 response code
       # then you need to force the nginx ingress to connect to the backend using HTTPS.
