--- a/k8s/cert-manager/cert-manager-webhook-duckdns/kustomization.yaml
+++ b/k8s/cert-manager/cert-manager-webhook-duckdns/kustomization.yaml
@@ -4,3 +4,21 @@ commonLabels:
 
 resources:
 - generated.yaml
+
+patches:
+- target:
+    apiVersion: cert-manager.io/v1
+    kind: Certificate
+    name: cert-manager-webhook-duckdns-ca
+  patch: |-
+    - op: replace
+      path: /spec/duration
+      value: 43800h0m0s
+- target:
+    apiVersion: cert-manager.io/v1
+    kind: Certificate
+    name: cert-manager-webhook-duckdns-webhook-tls
+  patch: |-
+    - op: replace
+      path: /spec/duration
+      value: 8760h0m0s
