--- a/k8s/argocd/argocd/generated.yaml
+++ b/k8s/argocd/argocd/generated.yaml
@@ -22832,6 +22832,7 @@ metadata:
     app.kubernetes.io/part-of: argocd
     app.kubernetes.io/version: "v2.9.3"
   annotations:
+    cert-manager.io/cluster-issuer: "cert-manager-webhook-duckdns-production"
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
     nginx.ingress.kubernetes.io/ssl-passthrough: "true"
@@ -22851,3 +22852,4 @@ spec:
   tls:
     - hosts:
       - argocd.zeb17-int.duckdns.org
+      secretName: argocd-cert
