--- a/k8s/longhorn-system/longhorn/generated.yaml
+++ b/k8s/longhorn-system/longhorn/generated.yaml
@@ -4304,6 +4304,14 @@ spec:
             value: "longhornio/csi-snapshotter:v6.2.1"
           - name: CSI_LIVENESS_PROBE_IMAGE
             value: "longhornio/livenessprobe:v2.9.0"
+          - name: CSI_ATTACHER_REPLICA_COUNT
+            value: "1"
+          - name: CSI_PROVISIONER_REPLICA_COUNT
+            value: "1"
+          - name: CSI_RESIZER_REPLICA_COUNT
+            value: "1"
+          - name: CSI_SNAPSHOTTER_REPLICA_COUNT
+            value: "1"
       serviceAccountName: longhorn-service-account
       securityContext:
         runAsUser: 0
