--- a/k8s/monitoring/prometheus/prometheus.yaml
+++ b/k8s/monitoring/prometheus/prometheus.yaml
@@ -7,6 +7,10 @@ spec:
   externalLabels:
     cluster: homelab
     prom_shard: "$(SHARD)"
+  securityContext:
+    fsGroup: 65534
+    runAsGroup: 65534
+    runAsUser: 65534
   serviceAccountName: prometheus
   serviceMonitorNamespaceSelector: {}
   serviceMonitorSelector: {}
