correct node-exporter servicemonitor

--- a/k8s/monitoring/node-exporter/helm/values.yaml
+++ b/k8s/monitoring/node-exporter/helm/values.yaml
@@ -117,7 +117,8 @@ prometheus:
 
     ## Override serviceMonitor selector
     ##
-    selectorOverride: {}
+    selectorOverride:
+      app.kubernetes.io/name: node-exporter
 
     ## Attach node metadata to discovered targets. Requires Prometheus v2.35.0 and above.
     ##
