--- a/k8s/grafana/grafana/kustomization.yaml
+++ b/k8s/grafana/grafana/kustomization.yaml
@@ -9,3 +9,10 @@ resources:
 - pvc.yaml
 - service.yaml
 
+images:
+  - name: grafana
+    newName: grafana/grafana
+    newTag: 10.2.2
+  - name: k8s-sidecar
+    newName: kiwigrid/k8s-sidecar
+    newTag: 1.25.3
