add datasource + provider confs

--- a/k8s/grafana/grafana/kustomization.yaml
+++ b/k8s/grafana/grafana/kustomization.yaml
@@ -17,3 +17,11 @@ images:
   - name: k8s-sidecar
     newName: kiwigrid/k8s-sidecar
     newTag: 1.25.3
+
+configMapGenerator:
+  - name: grafana-provisioning-datasources
+    files:
+      - files/datasources.yaml
+  - name: grafana-provisioning-providers
+    files:
+      - files/providers.yaml
