--- a/k8s/grafana/grafana/kustomization.yaml
+++ b/k8s/grafana/grafana/kustomization.yaml
@@ -4,6 +4,7 @@ commonLabels:
   app.kubernetes.io/name: grafana
 
 resources:
+- sealed-secret.yaml
 - rbac.yaml
 - deployment.yaml
 - ingress.yaml
@@ -25,3 +26,4 @@ configMapGenerator:
   - name: grafana-provisioning-providers
     files:
       - files/providers.yaml
+
