--- a/k8s/metallb-system/metallb/confs.yaml
+++ b/k8s/metallb-system/metallb/confs.yaml
@@ -6,6 +6,8 @@ metadata:
 spec:
   addresses:
   - 192.168.0.181/32 # set to worker node IPs
+  - 192.168.0.178/32 # set to worker node IPs
+  - 192.168.0.196/32 # set to worker node IPs
 ---
 apiVersion: metallb.io/v1beta1
 kind: L2Advertisement
