standardize common app.zb/name label

--- a/k8s/cert-manager/cert-manager-webhook-duckdns/kustomization.yaml
+++ b/k8s/cert-manager/cert-manager-webhook-duckdns/kustomization.yaml
@@ -1,6 +1,6 @@
 kind: Kustomization
 commonLabels:
-  app: cert-manager-webhook-duckdns
+  app.zb/name: cert-manager-webhook-duckdns
 
 resources:
 - sealed-secret.yaml
