--- a/k8s/metallb-system/metallb/kustomization.yaml
+++ b/k8s/metallb-system/metallb/kustomization.yaml
@@ -1,7 +1,7 @@
 kind: Kustomization
 namespace: metallb-system
 commonLabels:
-  app: metallb
+  app.zb/name: metallb
 
 resources:
 - namespace.yaml
