--- a/k8s/monitoring/prometheus/kustomization.yaml
+++ b/k8s/monitoring/prometheus/kustomization.yaml
@@ -1,7 +1,7 @@
 kind: Kustomization
 namespace: monitoring
 commonLabels:
-  app.kubernetes.io/name: prometheus
+  app.zb/name: prometheus
 
 resources:
 - ingress.yaml
