--- a/k8s/monitoring/node-exporter/kustomization.yaml
+++ b/k8s/monitoring/node-exporter/kustomization.yaml
@@ -1,6 +1,6 @@
 kind: Kustomization
 commonLabels:
-  app.kubernetes.io/name: node-exporter
+  app.zb/name: node-exporter
 
 resources:
 - generated.yaml
