--- a/k8s/monitoring/prometheus-operator/kustomization.yaml
+++ b/k8s/monitoring/prometheus-operator/kustomization.yaml
@@ -1,6 +1,6 @@
 kind: Kustomization
 commonLabels:
-  app.kubernetes.io/name: prometheus-operator 
+  app.zb/name: prometheus-operator
 
 resources:
 - bundle.yaml
