--- a/k8s/argocd/argocd/generated.yaml
+++ b/k8s/argocd/argocd/generated.yaml
@@ -21656,10 +21656,10 @@ spec:
           failureThreshold: 3
         resources:
           limits:
-            cpu: 50m
+            cpu: 1
             memory: 128Mi
           requests:
-            cpu: 10m
+            cpu: 100m
             memory: 64Mi
         securityContext:
           allowPrivilegeEscalation: false
@@ -21681,10 +21681,10 @@ spec:
         name: copyutil
         resources:
           limits:
-            cpu: 50m
+            cpu: 1
             memory: 128Mi
           requests:
-            cpu: 10m
+            cpu: 100m
             memory: 64Mi
         securityContext:
           allowPrivilegeEscalation: false
