remove longhorn pre-upgrade job

--- a/k8s/longhorn-system/longhorn/helm/values.yaml
+++ b/k8s/longhorn-system/longhorn/helm/values.yaml
@@ -103,7 +103,7 @@ persistence:
   removeSnapshotsDuringFilesystemTrim: ignored # "enabled" or "disabled" otherwise
 
 helmPreUpgradeCheckerJob:
-  enabled: true
+  enabled: false
 
 csi:
   kubeletRootDir: ~
