--- a/k8s/argocd/argocd/generated.yaml
+++ b/k8s/argocd/argocd/generated.yaml
@@ -22530,10 +22530,10 @@ spec:
         resources:
           limits:
             cpu: 500m
-            memory: 512Mi
+            memory: 1Gi
           requests:
             cpu: 250m
-            memory: 256Mi
+            memory: 512Mi
         securityContext:
           allowPrivilegeEscalation: false
           capabilities:
